# Home-Media-Stack

./: .env.example  README.md  config.sh  deploy.sh  docker-compose.yaml  setup.sh
grotto/backend/: .env.example  Dockerfile  README.md  manage.py  openapi.yaml  pyproject.toml  pytest.ini  requirements.txt
grotto/backend/alembic/versions/: e33bb845793c_auto_migration.py  fc150bd13ee2_initial_migration.py
grotto/backend/app/: __init__.py  main.py
grotto/backend/app/config/: config.py
grotto/backend/app/db/: database.py  models.py
grotto/backend/app/routes/: __init__.py  auth.py  health.py  media.py
grotto/backend/app/schemas/: __init__.py  auth.py  media.py
grotto/backend/app/services/: auth.py  media.py  radarr.py  sonarr.py
grotto/backend/app/utils/: logger.py
grotto/client/: README.md  index.html  package-lock.json  package.json
grotto/client/src/: index.css  main.tsx
grotto/client/src/api/: index.ts  sdk.gen.ts  types.gen.ts
grotto/client/src/components/: NavBar.tsx  navbar.css
grotto/client/src/context/: AuthContext.tsx
grotto/client/src/lib/: apiClient.ts
grotto/client/src/routes/: index.tsx
grotto/client/src/routes/auth/: Login.tsx  Register.tsx  auth.css
grotto/client/src/routes/home/: Dashboard.tsx  dashboard.css
grotto/client/src/routes/layouts/: AppLayout.tsx  AuthLayout.tsx
scripts/: config.sh  setup.sh
