[project]
name = "mtg-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "starlette==0.52.1",
    "python-multipart==0.0.22",

    # Database
    "sqlalchemy==2.0.41",
    "sqlalchemy-utils==0.42.1",
    "alembic==1.16.2",
    "asyncpg==0.30.0",
    "aiosqlite==0.22.1",
    "psycopg2==2.9.10",
    "greenlet==3.2.3",

    # Pydantic / Settings
    "pydantic==2.11.7",
    "pydantic-settings==2.9.1",
    "pydantic_core==2.33.2",
    "python-dotenv==1.1.0",
    "email_validator==2.2.0",
    "annotated-types==0.7.0",

    # Auth
    "bcrypt==4.3.0",
    "passlib==1.7.4",
    "python-jose==3.5.0",
    "cryptography==45.0.3",

    # HTTP / Scraping
    "httpx==0.28.1",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",

    # Utilities
    "rich==14.0.0",
    "typer==0.24.1",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.4",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "coverage==7.13.4",
    "black==25.1.0",
    "pip-review==1.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
